# ai-medical-assistant

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
ai/: base_models.py  llms.py  model_prompts.py  old_prompts.py  service.py
ai/image/: main.ipynb
client/: rq_client.py
config/: constants.py
routers/: scraper.py  uploads.py
utilities/: scraper_job.py  scraper_utilities.py  upload_utilities.py
